--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "music",
+  "name": "MusicFlow",
   "version": "0.0.1",
-  "description": "a music bot created by wonder",
+  "description": "a wonderful music bot made by wonder!",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
